# dcase2026-task1

./: .gitignore  README.md  pyproject.toml
analysis/: analyze_bsd10k_test_predictions.py  plot_pseudo_label_weight.py  plot_training_set_size.py
submission/: create_submission_package.py  verify_submission.py
sweeps/: beats_finetuning.yaml  beats_finetuning_bsd35k.yaml  beats_finetuning_learning_rate.yaml  beats_finetuning_patchout.yaml  beats_finetuning_with_BSD35k.yaml  beats_stage2.1_bsd35k_pseudo_labels.yaml  beats_stage2.2_bsd10k_finetune.yaml  clap_stage2.2_bsd10k_finetune.yaml  clapllm_stage2.1_bsd35k_pseudo_labels.yaml  clapnollm_stage2.1_bsd35k_pseudo_labels.yaml  lclap_stage1_bsd10k_learning_rate.yaml  lclap_stage2.1_bsd35k_learning_rate.yaml  lclap_stage2.2_bsd10k_finetune.yaml  lclapkw_stage1_bsd10k_learning_rate.yaml  lclapkw_stage2.1_bsd35k_learning_rate.yaml  lclapkw_stage2.2_bsd10k_finetune.yaml  lclapnollm_stage2.1_bsd35k_learning_rate.yaml  m2d_bsd10k_pseudo_labels.yaml  m2d_bsd35k_pseudo_labels.yaml  m2d_stage2.2_bsd10k_finetune_learning_rate.yaml  m2d_stage2_bsd35k_pseudo_labels.yaml  m2d_stage_2_bsd10k_finetune_learning_rate.yaml  passt_stage2.1_bsd35k_pseudo_labels.yaml  passt_stage2.2_bsd10k_finetune.yaml  stage1_m2d_bsd10k_learning_rate.yaml  stage_2_m2d_bsd10k_finetune_learning_rate.yaml  training_augment_llm_fusion_m2d.yaml  training_learning_rate.yaml  training_learning_rate_bart.yaml  training_learning_rate_clap.yaml  training_learning_rate_llm_fusion.yaml  training_learning_rate_llm_fusion_beats.yaml  (+11 more)
tests/: test_audio_flamingo3.py  (+9 more)
(+112 files in other folders)
